fix sale layout on mobile

--- a/styles/components/Products/CatalogProductCard.module.sass
+++ b/styles/components/Products/CatalogProductCard.module.sass
@@ -434,6 +434,17 @@
         margin-top: 5px
         margin-left: 2.8px
 
+        .product_card__price_prev
+            font-size: 12px
+            span
+                font-family: Lato,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif
+                position: relative
+
+        .product_card__price_diff
+            font-size: 12px
+            line-height: 14px
+            top: -1px
+
         .catalog_product_card__smalltext
             text-align: center
 
